<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editText_symbol"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:autofillHints="currency_symbol"
            android:ems="10"
            android:hint="@string/symbol"
            android:inputType="textPersonName"
            android:maxLength="2" />

        <EditText
            android:id="@+id/editCurrencyName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/name"
            android:importantForAutofill="no"
            android:inputType="textPersonName" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editText_pattern"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autofillHints="currency_pattern"
            android:ems="10"
            android:hint="@string/pattern"
            android:inputType="text" />

        <EditText
            android:id="@+id/editText_digits"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:autofillHints="fractional_digits"
            android:ems="10"
            android:hint="@string/frac_digits"
            android:inputType="number"
            android:maxLength="1" />

    </LinearLayout>

    <Button
        android:id="@+id/buttonAddC"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/done" />
</LinearLayout>